--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,9 @@ jobs:
       
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
+
+      - name: Install System Dependencies
+        run: sudo apt-get install -y libarchive-dev
       
       - name: Cache R packages
         uses: actions/cache@v2
